--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -2,8 +2,15 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="userHead">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
-    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <th:block th:if="${_csrf == null}">
+        <meta id="_csrf" name="_csrf" content=""/>
+        <meta id="_csrf_header" name="_csrf_header" content=""/>
+    </th:block>
+    <th:block th:unless="${_csrf == null}">
+        <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+        <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+    </th:block>
+
     <title>Home</title>
     <script th:src="@{/js/jquery-2.1.3.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/base.css}" />
